--- a/index.html
+++ b/index.html
@@ -2091,7 +2091,7 @@
     </div>
 
     <!-- Lesson Popup -->
-    <div id="lessonPopupOverlay" class="popup-overlay"></div>
+    <!-- <div id="lessonPopupOverlay" class="popup-overlay"></div>
     <div id="lessonPopup" class="lesson-popup">
         <button class="lesson-popup-close" aria-label="Close popup" onclick="closeLessonPopup()">
             <i class="fas fa-times"></i>
@@ -2154,6 +2154,6 @@
                 <p class="lesson-popup-footer-text">Start learning today and transform your business!</p>
             </div>
         </div>
-    </div>
+    </div> -->
 </body>
 </html>
